2002-09-21  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* safe_memory.h (safe_delete): Make a templated function.
	* cygserver.cc (~server_request): Update use of safe_delete.
	(main): Ditto.
	* cygserver_client.cc (client_request::handle_request): Ditto.
	(client_request::make_request): Ditto.
	* cygserver_process.cc (~process_cleanup): Ditto.
	(process::remove): Ditto.
	(process::cleanup): Ditto.
	(process_cache::process): Ditto.
	* cygserver_shm.cc (server_shmmgr::segment_t::detach): Ditto.
	(server_shmmgr::delete_segment): Ditto.
	* shm.cc (client_shmmgr::shmdt): Ditto.
	* threaded_queue.cc (~threaded_queue): Ditto.
	(threaded_queue::worker_loop): Ditto.

2002-09-21  Robert Collins <rbtcollins@hotmail.com>

	* pthread.cc: Use class::call for converted pthread and semaphore
	calls.
	* thread.cc: Convert various __pthread_call and __sem_call to 
	pthread::call and sem::call throughout.
	* pthread.h (__pthread_cancel): Convert to pthread::cancel.
	(__pthread_join): Convert to pthread::join.
	(__pthread_detach): Convert to pthread::detach.
	(__pthread_create): Convert to pthread::create.
	(__pthread_once): Convert to pthread::once.
	(__pthread_atfork): Convert to pthread::atfork.
	(__pthread_suspend): Convert to pthread::suspend.
	(__pthread_continue): Convert to pthread::resume.
	(__sem_init): Convert to semaphore::init.
	(__sem_destroy): Convert to semaphore::destroy.
	(__sem_wait): Convert to semaphore::wait.
	(__sem_trywait): Convert to semaphore::trywait.
	(__sem_post): Convert to semaphore::post.

2002-09-21  Robert Collins <rbtcollins@hotmail.com>

	* thread.cc: Finish the removal of the separate pthread_key
	destructor list.
	Remove all pthread_key_destructor and pthread_key_destructor_list
	references throughout.
	(pthread::exit): Call the new pthread_key interface to activate
	destructors.
	(pthread_key::keys): Change into a list.
	(pthread_key::saveAKey): New method, used via forEach.
	(pthread_key::restoreAKey): Ditto.