@@ -1,5 +1,15 @@
 2002-09-21  Conrad Scott  <conrad.scott@dsl.pipex.com>
 
+	* cygwin_ipc.h: Move to "include/cygwin/ipc.h".
+	* cygwin_shm.h: Move to "include/cygwin/shm.h".
+	* include/cygwin/ipc.h: New file.
+	* include/cygwin/shm.h: New file.
+	* ipc.c:c Update <cygwin/ipc.h> include.
+	* cygserver_shm.cc: Update <cygwin/shm.h> include.
+	* shm.cc: Ditto.
+
+2002-09-21  Conrad Scott  <conrad.scott@dsl.pipex.com>
+
 	* safe_memory.h (safe_delete): Make a templated function.
 	* cygserver.cc (~server_request): Update use of safe_delete.
 	(main): Ditto.
